added home page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,44 @@
      
             </nav>
         </header>
+
+         <!-- ***main*** -->
+    <main class="main">
+        <!-- ***home*** -->
+        <section class="home" id="home">
+            <div class="home_container container grid">
+                <img src="assets/img/home.png" alt="" class="home_img">
+
+                <div class="home_data">
+                    <h1 class="home_title">
+                        Lorem ipsum dolor sit amet.
+                    </h1>
+                    <p class="home_description">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos placeat, 
+                        officia temporibus et doloremque.
+                    </p>
+                    <a href="#about" class="button button_flex">
+                        Lorem <i class="fa-solid fa-arrow-right button_icon"></i>
+                    </a>
+                </div>
+                <div class="home_social">
+                    <span class="home_social-follow">Follow Us</span>
+
+                    <div class="home_social-links">
+                        <a href="https://www.facebook.com/" target="_blank" class="home_social-link">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href="https://www.instagram.com/" target="_blank" class="home_social-link">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="https://www.twitter.com/" target="_blank" class="home_social-link">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     
     <!-- SCRIPT -->
     <script src="assets/js/main.js"></script>
